--- a/src/main/resources/static/css.css
+++ b/src/main/resources/static/css.css
@@ -1,3 +1,20 @@
 body{
     background-color: black;
 }
+
+.container{
+    width: 500px;
+    right: 500px;
+    margin: auto;
+}
+
+.row{
+    width: 110px;
+    height: 160px;
+    float: left;
+}
+
+img{
+    width: 110px;
+    height: 160px;
+}
