--- a/src/main/resources/templates/bookDetails.html
+++ b/src/main/resources/templates/bookDetails.html
@@ -8,13 +8,9 @@
     <title>Title</title>
 </head>
 <body>
-
     <div class="container">
-        <div class="row" th:each="book : ${books}">
-            <a th:href="@{'book/' + ${book.nameImg}}">
-                <img th:src="@{'/img/' + ${book.nameImg} + '.jpg'}">
-            </a>
-            <p th:text="${book.nameBook}"></p>
+        <div class="row">
+            <img th:src="@{'/img/' + ${book.nameImg} + '.jpg'}">
         </div>
     </div>
 
