--- a/src/main/resources/static/cssDetails.css
+++ b/src/main/resources/static/cssDetails.css
@@ -33,12 +33,9 @@ body{
 }
 
 .row{
-    width: 270px;
+    width: 276px;
     height: 455px;
     margin: auto;
-    margin-top: 30px;
-    position: relative;
-
 }
 
 p{
@@ -55,4 +52,16 @@ img{
 
 .text{
     float: right;
+}
+
+a{
+    text-decoration: none;
+}
+
+.button{
+    margin-top: 10px;
+    border-radius:  5px ;
+    border: 1px solid #cccccc;
+    display: inline-block;
+    background-color: #F7F5FA;
 }
