--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,12 +11,12 @@
 <body>
     <div id="head">
         <div id="headContent">
-            <h3>demoBooks.com</h3>
+            <a th:href="@{/}"><h3>demoBooks.com</h3></a>
         </div>
     </div>
     <div class="container">
         <div class="row" th:each="book : ${books}">
-            <a th:href="@{'book/' + ${book.nameImg}}">
+            <a class="rowImg" th:href="@{'book/' + ${book.nameImg}}">
                 <img th:src="@{'/img/' + ${book.nameImg} + '.jpg'}">
             </a>
             <p th:text="${book.nameBook}"></p>
