--- a/src/main/resources/static/css.css
+++ b/src/main/resources/static/css.css
@@ -60,3 +60,21 @@ img{
     opacity: 0.7;
 }
 
+#inputDiv{
+    width: 560px;
+    height: 50px;
+    margin: auto;
+}
+
+input {
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: white;
+    background-image: url('/img/searchicon.png');
+    background-position: -5px -5px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+}
+
