--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,8 @@
     </div>
 
     <div id="inputDiv">
-        <form>
-            <input name="filter" />
+        <form action="filter" method="get">
+            <input name="name"/>
         </form>
     </div>
 
