--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 
     <div id="inputDiv">
         <form action="filter" method="get">
-            <input name="name"/>
+            <input name="name" required/>
         </form>
     </div>
 
